Add maven test projects

--- a/Maven/jar-dependencies-local/readme
+++ b/Maven/jar-dependencies-local/readme
@@ -3,4 +3,4 @@ mvn clean package
 
 Run:
 cd target
-java -classpath lib/log4j-1.2.17.jar:jar-dependencies-local-1.0-SNAPSHOT.jar edu.javacourse.Main
+java -classpath lib/log4j-1.2.17.jar:jar-dependencies-local-1.0-SNAPSHOT.jar edu.javacourse.HawtioSample
