--- a/Maven/jar-simple/readme
+++ b/Maven/jar-simple/readme
@@ -3,4 +3,4 @@ mvn clean package
 
 Run:
 cd target
-java -cp jar-simple-1.0-SNAPSHOT.jar edu.javacourse.Main
+java -cp jar-simple-1.0-SNAPSHOT.jar edu.javacourse.HawtioSample
